feat(server): ADD getAllProjects
